--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activities.EmailActivity"></activity>
+        <activity android:name=".activities.DealActivity"></activity>
+        <activity android:name=".activities.EmailActivity" />
         <activity android:name=".activities.BaseActivity" />
         <activity android:name=".activities.HomeActivity">
             <intent-filter>
