--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     package="io.audioshinigami.travelmantics">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activities.DealActivity"></activity>
+        <service
+            android:name=".services.UploadImageIntentService"
+            android:exported="false"></service>
+
+        <activity android:name=".activities.DealActivity" />
         <activity android:name=".activities.EmailSignInActivity" />
         <activity android:name=".activities.HomeActivity">
             <intent-filter>
