--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     // FirebaseUI Storage only
     implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
 
+    //Google sign in
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
